# qanji-scanner

./: .appveyor.yml  .gitignore  CMakeLists.txt  kanji.h  main.cpp  model.cpp  model.h  scanner.cpp  scanner.h
